# mpv-kt

./: .editorconfig  .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: build.yml  check.yml  release.yml
.run/: android.run.xml
build-logic/: build.gradle.kts  settings.gradle.kts
build-logic/src/main/kotlin/dev/zt64/mpvkt/gradle/: KmpLibPlugin.kt  Util.kt
compose/: build.gradle.kts
compose/api/: compose.api
compose/src/commonMain/kotlin/dev/zt64/mpvkt/compose/: MpvPlayer.kt  MpvState.kt
gradle/: libs.versions.toml
jni/: build.gradle.kts
jni/src/main/cpp/: CMakeLists.txt  client.cpp  jni_utils.cpp  jni_utils.h  property.cpp  render.cpp
jvm/: build.gradle.kts
mpv/: build.gradle.kts
mpv/native/: CMakeLists.txt  build.sh  meson.build  native.ini
mpv/native/cross/: android-arm64.ini  base-non-android.ini  linux-aarch64.ini  windows-x86_64.ini
mpv/native/include/: globals.h  jni_utils.h
mpv/native/src/: client.cpp  event.cpp  jni_utils.cpp  property.cpp  render.cpp  render_gl.cpp  stream_cb.cpp
mpv/native/subprojects/: .gitignore  ffmpeg.wrap  libass.wrap  libplacebo.wrap  mpv.wrap
mpv/src/androidMain/cpp/: CMakeLists.txt
mpv/src/androidMain/kotlin/dev/zt64/mpv/: Mpv.android.kt
mpv/src/androidMain/kotlin/dev/zt64/mpvkt/: Mpv.android.kt  NativeLoader.android.kt
mpv/src/commonMain/kotlin/dev/zt64/mpv/: CheckError.kt  Mpv.kt  MpvCommand.kt  MpvError.kt  MpvEvent.kt  MpvEventId.kt  MpvFormat.kt  MpvHook.kt  MpvLogLevel.kt  MpvNode.kt  MpvProperty.kt  MpvRender.kt  MpvRenderContext.kt  MpvRenderFrameInfoFlag.kt  MpvRenderParam.kt  MpvRenderParamType.kt
mpv/src/commonMain/kotlin/dev/zt64/mpvkt/: Mpv.kt  MpvCommand.kt  MpvError.kt  MpvEvent.kt  MpvEventId.kt  MpvException.kt  MpvFormat.kt  MpvHook.kt  MpvLogLevel.kt  MpvNode.kt  MpvProperty.kt  MpvRenderUpdateCallback.kt  MpvStreamCb.kt  MpvWakeupCallback.kt
mpv/src/commonMain/kotlin/dev/zt64/mpvkt/render/: MpvRender.kt  MpvRenderContext.kt  MpvRenderFrameInfoFlag.kt  MpvRenderGl.kt  MpvRenderParam.kt  MpvRenderParamType.kt
mpv/src/commonTest/kotlin/dev/zt64/mpv/: MpvTest.kt
mpv/src/commonTest/kotlin/dev/zt64/mpvkt/: CbTest.kt  EventTest.kt  HookTest.kt  PropertyTest.kt  RenderTest.kt  TestUtil.kt
mpv/src/jvmCommonMain/kotlin/dev/zt64/mpv/: Mpv.jvmCommon.kt  MpvCommand.jvmCommon.kt  MpvEvent.jvmCommon.kt  MpvNode.jvmCommon.kt  MpvProperty.jvmCommon.kt  MpvRender.jvmCommon.kt  MpvRenderContext.jvmCommon.kt  MpvRenderParam.jvmCommon.kt  NativeLoader.kt
mpv/src/jvmCommonMain/kotlin/dev/zt64/mpvkt/: LibMpv.kt  Mpv.jvmCommon.kt  MpvCommand.jvmCommon.kt  MpvEvent.jvmCommon.kt  MpvNode.jvmCommon.kt  MpvProperty.jvmCommon.kt  MpvStreamCb.jvmCommon.kt  NativeLoader.kt
mpv/src/jvmCommonMain/kotlin/dev/zt64/mpvkt/render/: MpvRender.jvmCommon.kt  MpvRenderContext.jvmCommon.kt  MpvRenderGl.jvmCommon.kt  MpvRenderParam.jvmCommon.kt
mpv/src/jvmMain/kotlin/dev/zt64/mpvkt/: NativeLoader.jvm.kt
mpv/src/nativeInterop/cinterop/: libmpv.def
mpv/src/nativeMain/kotlin/dev/zt64/mpv/: Mpv.native.kt  MpvCommand.native.kt  MpvEvent.native.kt  MpvNode.native.kt  MpvProperty.native.kt  MpvRender.native.kt  MpvRenderContext.native.kt  MpvRenderParam.native.kt
mpv/src/nativeMain/kotlin/dev/zt64/mpvkt/: CheckError.kt  Mpv.native.kt  MpvCommand.native.kt  MpvEvent.native.kt  MpvNode.native.kt  MpvProperty.native.kt  MpvStreamCb.native.kt
mpv/src/nativeMain/kotlin/dev/zt64/mpvkt/render/: MpvRender.native.kt  MpvRenderContext.native.kt  MpvRenderGl.native.kt  MpvRenderParam.native.kt
sample/: build.gradle.kts  sample.podspec
sample/src/androidMain/: AndroidManifest.xml
sample/src/androidMain/cpp/: CMakeLists.txt
sample/src/androidMain/kotlin/dev/zt64/sample/: MainActivity.kt
sample/src/commonMain/kotlin/dev/zt64/sample/: Sample.kt  UrlDialog.kt
sample/src/iosMain/kotlin/dev/zt64/sample/: Main.kt
sample/src/jvmMain/kotlin/dev/zt64/sample/: Main.kt
